--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 # Node artifact files
 node_modules/
 dist/
-package-lock.json/
 
 # Compiled Java class files
 *.class
@@ -16,6 +15,7 @@ package-lock.json/
 
 # Log files
 *.log
+/package-lock.json
 
 # Package files
 *.jar
