--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -19,8 +19,14 @@ jobs:
         with:
           node-version: "20"
 
-      - name: Install dependencies
+      - name: Install Root Dependencies
         run: npm install
+
+      - name: Build Frontend
+        run: |
+          cd static/frontend
+          npm install
+          npm run build
 
       - name: Install Forge CLI and Configure
         run: |
