--- a/static/frontend/package.json
+++ b/static/frontend/package.json
@@ -4,7 +4,15 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@atlaskit/button": "^23.9.2",
     "@atlaskit/css-reset": "^6.6.2",
+    "@atlaskit/empty-state": "^10.1.10",
+    "@atlaskit/lozenge": "^13.3.0",
+    "@atlaskit/primitives": "^17.0.0",
+    "@atlaskit/section-message": "^8.11.2",
+    "@atlaskit/skeleton": "^2.1.5",
+    "@atlaskit/spinner": "^19.0.8",
+    "@atlaskit/tokens": "^9.0.0",
     "@forge/bridge": "^5.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
