--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    name: Build and Deploy
+    name: Build and Deploy to Development
     runs-on: ubuntu-latest
 
     steps:
@@ -18,31 +18,27 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
+          cache: "npm"
 
       - name: Install Root Dependencies
-        run: npm install
+        run: npm ci
+
+      - name: Install Frontend Dependencies
+        working-directory: static/frontend
+        run: npm ci
 
       - name: Build Frontend
-        run: |
-          cd static/frontend
-          npm install
-          npm run build
+        working-directory: static/frontend
+        run: npm run build
 
-      - name: Install Forge CLI and Configure
-        run: |
-          npm install -g @forge/cli
-          forge settings set usage-analytics true
+      - name: Install Forge CLI
+        run: npm install -g @forge/cli
 
-      - name: Deploy to Forge (Development)
-        run: |
-          forge deploy -e development --non-interactive
-        env:
-          FORGE_EMAIL: ${{ secrets.FORGE_EMAIL }}
-          FORGE_API_TOKEN: ${{ secrets.FORGE_API_TOKEN }}
+      - name: Configure Forge CLI
+        run: forge settings set usage-analytics true
 
-      - name: Set Anthropic API Key
-        run: |
-          forge variables set --encrypt ANTHROPIC_API_KEY ${{ secrets.ANTHROPIC_API_KEY }} -e development
+      - name: Deploy to Forge
+        run: forge deploy -e development
         env:
           FORGE_EMAIL: ${{ secrets.FORGE_EMAIL }}
           FORGE_API_TOKEN: ${{ secrets.FORGE_API_TOKEN }}
