--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -20,11 +20,11 @@ jobs:
           node-version: "20"
 
       - name: Install Root Dependencies
-        run: npm ci
+        run: npm install
 
       - name: Install Frontend Dependencies
         working-directory: static/frontend
-        run: npm ci
+        run: npm install
 
       - name: Build Frontend
         working-directory: static/frontend
