--- a/manifest.yml
+++ b/manifest.yml
@@ -3,6 +3,11 @@ app:
     name: nodejs20.x
   id: ari:cloud:ecosystem::app/b39b8559-701a-4217-a1dc-6dc91f4e3b3d
 
+  privacy:
+    policyUrl: https://github.com/Semb0y/betterbacklog/privacy
+  terms:
+    url: https://github.com/Semb0y/betterbacklog/terms
+
 modules:
   jira:issuePanel:
     - key: betterbacklog-jira-panel
