--- a/manifest.yml
+++ b/manifest.yml
@@ -4,9 +4,9 @@ app:
   id: ari:cloud:ecosystem::app/b39b8559-701a-4217-a1dc-6dc91f4e3b3d
 
   privacy:
-    policyUrl: https://github.com/Semb0y/betterbacklog/privacy
+    policyUrl: https://semb0y.github.io/betterbacklog/privacy
   terms:
-    url: https://github.com/Semb0y/betterbacklog/terms
+    url: https://semb0y.github.io/betterbacklog/terms
 
 modules:
   jira:issuePanel:
